@@ -1,0 +1,2 @@
+// Required global settings and mixins for Foundation
+@import "foundation";
