@@ -1,3 +1,3 @@
 module RailsLayout
-  VERSION = "0.1.9"
+  VERSION = "0.2.0"
 end
